      method for data frames, and also bug \PR{18745}.
      \I{Relatedly}, the \code{format()} method gets an option \code{cut.names}.

      \item \code{stem()} correctly formats also in cases where rounding
      up, e.g., from 9.96 to 10 needs more digits; thanks to
      \I{Ella Kaye} and \I{Kelly Bodwin}, fixing \PR{8934} during
      \sQuote{\I{R Dev Day}} at \I{useR!2024}.

      \item \pkg{tools}' \code{toTitleCase()} now works better, fixing
      \PR{18674}, thanks to \I{Shannon Pileggi}, \I{Sarah Zeller},
      \I{Reiko Okamoto}, and \I{Hugo Gruson}'s \sQuote{\I{R Dev Day}}
      effort.

      \item Printing matrices (typically with many rows and or columns)
      now also omits columns when desirable according to option
      \code{max.print}, or argument \code{max}, respectively.
      This is primarily the work of \I{Lorena Abad},
      \I{Ekaterina Akimova}, \I{Hanne Oberman}, \I{Abhishek Ulayil},
      and \I{Lionel Henry} at the \sQuote{\I{R Dev Day}}, thus fixing
      \PR{15027}.

      \item \code{Sys.setLanguage()} now works in an \command{LC_ALL=C R} session
      on some platforms.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.1 patched}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \I{Mathlib} function \code{lgammacor(x)} no longer warns about
      underflow to zero for large \code{x}.

      \item Text widths and heights were incorrectly reported by the
      Quartz device if the drawing context didn't exist yet (typically
      when drawing off-screen to a window that is yet to appear, see
      \PR{18591}).

      \item The Quartz device could segfault in cases where paths with
      spaces are used in the new glyph drawing API.
      Thanks to \I{Tomek Gieorgijewski} (\PR{18758}).
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.1}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Functions \code{R_atof} and \code{R_strtod} declared in
      header \file{R_ext/Utils.h} are now documented in